// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when no text is passed as prop 1`] = `
<td
  className="flex items-stretch border border-gray-400 border-collapse p-0"
>
  <button
    className="flex text-xl px-3 py-3 h-100 w-100 bg-embl-primary-blue text-white w-full h-full justify-center "
    onClick={[Function]}
  />
</td>
`;

exports[`renders when text and row id is passed as prop 1`] = `
<td
  className="flex items-stretch border border-gray-400 border-collapse p-0"
>
  <button
    className="flex text-xl px-3 py-3 h-100 w-100 bg-embl-primary-blue text-white w-full h-full justify-center "
    onClick={[Function]}
  >
    +
  </button>
</td>
`;
